Made changes to python methods in controllers